--- a/DM_Project3_Tirdod_Sobottka.ipynb
+++ b/DM_Project3_Tirdod_Sobottka.ipynb
@@ -35,6 +35,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "68e13274",
+   "metadata": {},
+   "source": [
+    "## **A.1  Explore the data and choose the KPI’s**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "1071ec9b",
