--- a/DM_Project3_Tirdod_Sobottka.ipynb
+++ b/DM_Project3_Tirdod_Sobottka.ipynb
@@ -2614,6 +2614,211 @@
     "    df.show(3)\n",
     "    df.select([countDistinct(c).alias(f\"{c}_distinct\") for c in df.columns]).show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6113d769",
+   "metadata": {},
+   "source": [
+    "## **A.3 Move Data to the Exploitation Zone**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "7ea0d9af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"Exploitation Zone Pipeline\") \\\n",
+    "    .getOrCreate()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "dc39bf82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "formatted_zone = Path.cwd() / \"formatted_zone\"\n",
+    "\n",
+    "incident_df = spark.read.option(\"basePath\", str(formatted_zone / \"incidences\")) \\\n",
+    "    .parquet(str(formatted_zone / \"incidences\"))\n",
+    "\n",
+    "income_df = spark.read.option(\"basePath\", str(formatted_zone / \"income\")) \\\n",
+    "    .parquet(str(formatted_zone / \"income\"))\n",
+    "\n",
+    "unemployment_df = spark.read.option(\"basePath\", str(formatted_zone / \"unemployment\")) \\\n",
+    "    .parquet(str(formatted_zone / \"unemployment\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef080ced",
+   "metadata": {},
+   "source": [
+    "**Transformations to support KPI analysis**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fff25e32",
+   "metadata": {},
+   "source": [
+    "Dataset: Incidences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "537b2681",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col, count, month\n",
+    "\n",
+    "# Total number of incidences per district\n",
+    "incident_kpi1 = incident_df.groupBy(\"District_Name\").agg(count(\"*\").alias(\"total_incidences\"))\n",
+    "\n",
+    "# Most common type of incidence\n",
+    "incident_kpi2 = incident_df.groupBy(\"Details\").agg(count(\"*\").alias(\"count\")).orderBy(col(\"count\").desc())\n",
+    "\n",
+    "# Month with more incidences\n",
+    "incident_df = incident_df.withColumn(\"month\", col(\"Creation_Month\").cast(\"int\"))\n",
+    "incident_kpi3 = incident_df.groupBy(\"month\").agg(count(\"*\").alias(\"total\")).orderBy(col(\"total\").desc())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06893b20",
+   "metadata": {},
+   "source": [
+    "Dataset: Income"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ba0958b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import avg, sum as _sum, when\n",
+    "\n",
+    "income_df = income_df.withColumn(\"RFD\", col(\"Income_Index\").cast(\"float\")) \\\n",
+    "                     .withColumn(\"Population\", col(\"Population\").cast(\"int\"))\n",
+    "\n",
+    "# Average RFD per district\n",
+    "income_kpi1 = income_df.groupBy(\"District_Name\").agg(avg(\"RFD\").alias(\"avg_RFD\"))\n",
+    "\n",
+    "# Above/below average RFD\n",
+    "income_kpi2 = income_kpi1.withColumn(\"above_avg\", when(col(\"avg_RFD\") > 100, \"Above\").otherwise(\"Below\"))\n",
+    "\n",
+    "# Population-weighted income\n",
+    "income_df = income_df.withColumn(\"weighted\", col(\"RFD\") * col(\"Population\"))\n",
+    "income_kpi3 = income_df.groupBy(\"District_Name\") \\\n",
+    "    .agg((_sum(\"weighted\") / _sum(\"Population\")).alias(\"population_weighted_RFD\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0a75018",
+   "metadata": {},
+   "source": [
+    "Dataset: Unemployment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "d1d5b367",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Row(Month='11', District_Code='3', Occupation_Type='Demanda no aturats', Neighborhood_Name='el Poble Sec', District_Name='Sants-Montjuïc', Count='311', Gender='Homes', Year=2016)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unemployment_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "79727c3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.window import Window\n",
+    "from pyspark.sql.functions import lag, round\n",
+    "\n",
+    "unemployment_df = unemployment_df.withColumn(\"Unemp\", col(\"Occupation_Type\").try_cast(\"float\"))\n",
+    "\n",
+    "# Unemployment by gender\n",
+    "unemp_kpi1 = unemployment_df.groupBy(\"Gender\").agg(avg(\"Unemp\").alias(\"avg_unemp\"))\n",
+    "\n",
+    "# Unemployment by district\n",
+    "unemp_kpi2 = unemployment_df.groupBy(\"District_Code\").agg(avg(\"Unemp\").alias(\"avg_unemp\"))\n",
+    "\n",
+    "# % change in unemployment by year\n",
+    "window = Window.partitionBy(\"District_Code\").orderBy(\"Year\")\n",
+    "unemployment_df = unemployment_df.withColumn(\"prev\", lag(\"Unemp\").over(window))\n",
+    "unemployment_df = unemployment_df.withColumn(\"pct_change\", round(((col(\"Unemp\") - col(\"prev\")) / col(\"prev\")) * 100, 2))\n",
+    "unemp_kpi3 = unemployment_df.select(\"District_Code\", \"Year\", \"Unemp\", \"pct_change\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b729932",
+   "metadata": {},
+   "source": [
+    "Write processed data to the Exploitation Zone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "7273eccf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exploitation_zone = Path.cwd() / \"exploitation_zone\"\n",
+    "\n",
+    "\n",
+    "def write_df(df, name):\n",
+    "    df.write.mode(\"overwrite\").parquet(str(exploitation_zone / name))\n",
+    "\n",
+    "write_df(incident_kpi1, \"incidents_by_district\")\n",
+    "write_df(incident_kpi2, \"top_incident_types\")\n",
+    "write_df(incident_kpi3, \"incidents_by_month\")\n",
+    "\n",
+    "write_df(income_kpi1, \"income_avg_by_district\")\n",
+    "write_df(income_kpi2, \"income_above_below_avg\")\n",
+    "write_df(income_kpi3, \"population_weighted_income\")\n",
+    "\n",
+    "write_df(unemp_kpi1, \"unemployment_by_gender\")\n",
+    "write_df(unemp_kpi2, \"unemployment_by_district\")\n",
+    "write_df(unemp_kpi3, \"unemployment_pct_change\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5e2706a",
+   "metadata": {},
+   "source": [
+    "## **A.4 Validate the Data**"
+   ]
   }
  ],
  "metadata": {
