--- a/DM_Project3_Tirdod_Sobottka.ipynb
+++ b/DM_Project3_Tirdod_Sobottka.ipynb
@@ -3139,6 +3139,22 @@
     "print(\"\\n Unemployment % change sample:\")\n",
     "unemp_change.orderBy(\"Year\", \"District_Code\").show(5)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43db573e",
+   "metadata": {},
+   "source": [
+    "## **B.1 Descriptive Analysis and Dashboarding**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a7e4256",
+   "metadata": {},
+   "source": [
+    "## **B.2 Predictive Analysis via Model Training and Management**"
+   ]
   }
  ],
  "metadata": {
