add in missing line to B2

--- a/DM_Project3_B2.ipynb
+++ b/DM_Project3_B2.ipynb
@@ -923,6 +923,9 @@
     "# Split into training and test sets\n",
     "train_df, test_df = assembled_df.randomSplit([0.8, 0.2], seed=42)\n",
     "\n",
+    "# Define logistic regression model\n",
+    "lr = LogisticRegression(featuresCol=\"features\", labelCol=\"high_income\")\n",
+    "\n",
     "# Train the model\n",
     "lr_model = lr.fit(train_df)\n",
     "\n",
