--- a/DM_Project3_Tirdod_Sobottka.ipynb
+++ b/DM_Project3_Tirdod_Sobottka.ipynb
@@ -4499,10 +4499,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0edcb01a",
+   "metadata": {},
+   "source": [
+    "The EDA was coded previously in the first part A1 in order to get some insights from the data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6a7e4256",
    "metadata": {},
    "source": [
     "## **B.2 Predictive Analysis via Model Training and Management**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfc7017e",
+   "metadata": {},
+   "source": [
+    "The script for the B2 task is in a separated jupyter notebook."
    ]
   }
  ],
